# library

./: .editorconfig  .gitignore  LICENSE  README.md  docker-compose.yml  techstack.md  techstack.yml
backend/: pyproject.toml
backend/server/: __init__.py
server/: .gitignore  Dockerfile  Pipfile  README.md  gunicorn.conf.py  pyproject.toml
server/app/: __init__.py  config.py
server/app/books/: repos.py  resources.py  services.py  tables.py
server/app/core/: database.py
server/migrations/: env.py
server/migrations/versions/: b70998025735_create_books_table.py
server/scripts/: run-dev  run-dev.sh  run-prod  run-tests
