[tool.poetry]
name = "app"
version = "0.1.0"
description = "backend application server for the library."
authors = ["Aryan Iyappan <aryaniyappan2006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
falcon = "^3.1.1"
gunicorn = "^20.1.0"
python-decouple = "^3.8"
sqlalchemy = "^2.0.8"
sqlalchemy-cockroachdb = "^2.0.0"
psycopg2-binary = "^2.9.6"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
